# sample1

./: .coverage  app.py  file1.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bugs_report.yml
.github/workflows/: bandit.yml  coverage.yml  reviewdog.yml
src/: addDef.py  banditSample.py
tests/: test_addDef.py  test_fizzbuzz.py
