[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["cs-n-takayasu <n.takayasu@cancerscan.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "23.1.0"
bandit = "^1.7.5"
pip-audit = "^2.5.4"
PyYAML = "^6.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
